<resources>
    <string name="app_name">My Tutorial Application</string>
    <string name="gameFlowDescription">1.Focus on the sequence of images that will arise in the central box frame and remember them.
        \n2. After the sequence of images disappear press the buttons in the lower box frame in the same sequence they appeared.
    </string>
    <string name="spinner_title"></string>
    <string name="tutorialTitleText">Game Tutorial</string>
    <string name="gameObjectiveTitle">Game Objective:</string>
    <string name="gameObjectiveDescription">The game objective is to complete as most right sequence as possible.</string>
    <string name="gameFlowTitle">How to play:</string>
    <string name="gameRulesTitle">Game rules:</string>
    <string name="gameRulesDescription">Coins:\n 1. The player starts the game with 0 coins and wins coins every time  he presses the whole sequence image correctly.\n 2. The player win a surprise gift from our sponsors every 5000 coins\n\n
        Lives:\n The player start the game with 5 lives and very time you fail to press the right sequence of images you lose 1 life. When you press the 5 times the whole sequence of images correctly you win a life.\n\n
        Levels:\n The player increases the game levels when whole right sequences of images are pressed.
        Number images: The number of images increase every time the player increases the game level.

    </string>
</resources>
